<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".TimerFragment">

    <TextView
        android:id="@+id/scramble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingTop="8dp"
        android:paddingRight="24dp"
        android:text="L U' L2 B U L2 B2 R D' R2 D2 B2 L' D' B' D L2 D' F R D' F2 L2 D' B2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scramble"
        app:layout_constraintBottom_toTopOf="@+id/mean"/>

    <TextView
        android:id="@+id/solve_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingBottom="10dp"
        android:text="@string/count_default"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/best"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingBottom="5dp"
        android:text="@string/best_default"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/solve_count"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingBottom="5dp"
        android:text="@string/mean_default"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/best"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/avg_of_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/ao50_default"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/avg_of_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"
        android:text="@string/ao10_default"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/avg_of_50"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/avg_of_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"
        android:text="@string/ao5_default"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/avg_of_10"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>